--- a/index.html
+++ b/index.html
@@ -64,12 +64,34 @@
         <input id="result-day3-part2" type="text" disabled>
       </section>
   </section>
+  <hr>
+  <section id="day4">
+    <h2>Day 4: The Ideal Stocking Stuffer</h2>
+      <label for="input-day4">Input</label>
+      <input id="input-day4" type="text" value="ckczppom">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day4-part1">Go!</button>
+        <label for="result-day4-part1">Result</label>
+        <input id="result-day4-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day4-part2">Go!</button>
+        <label for="result-day4-part2">Result</label>
+        <input id="result-day4-part2" type="text" disabled>
+      </section>
+  </section>
 </main>
-
 
 <script src="shared.js"></script>
 <script src="day-1.js"></script>
 <script src="day-2.js"></script>
 <script src="day-3.js"></script>
+
+<!-- required for day4 -->
+<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+
+<script src="day-4.js"></script>
 </body>
 </html>
