add dummy files and stuff

--- a/index.html
+++ b/index.html
@@ -82,16 +82,416 @@
         <input id="result-day4-part2" type="text" disabled>
       </section>
   </section>
+  <hr>
+  <section id="day5">
+    <h2>Day 5: A placeholder</h2>
+      <label for="input-day5">Input</label>
+      <input id="input-day5" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day5-part1">Go!</button>
+        <label for="result-day5-part1">Result</label>
+        <input id="result-day5-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day5-part2">Go!</button>
+        <label for="result-day5-part2">Result</label>
+        <input id="result-day5-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day6">
+    <h2>Day 6: A placeholder</h2>
+      <label for="input-day6">Input</label>
+      <input id="input-day6" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day6-part1">Go!</button>
+        <label for="result-day6-part1">Result</label>
+        <input id="result-day6-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day6-part2">Go!</button>
+        <label for="result-day6-part2">Result</label>
+        <input id="result-day6-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day7">
+    <h2>Day 7: A placeholder</h2>
+      <label for="input-day7">Input</label>
+      <input id="input-day7" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day7-part1">Go!</button>
+        <label for="result-day7-part1">Result</label>
+        <input id="result-day7-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day7-part2">Go!</button>
+        <label for="result-day7-part2">Result</label>
+        <input id="result-day7-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day8">
+    <h2>Day 8: A placeholder</h2>
+      <label for="input-day8">Input</label>
+      <input id="input-day8" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day8-part1">Go!</button>
+        <label for="result-day8-part1">Result</label>
+        <input id="result-day8-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day8-part2">Go!</button>
+        <label for="result-day8-part2">Result</label>
+        <input id="result-day8-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day9">
+    <h2>Day 9: A placeholder</h2>
+      <label for="input-day9">Input</label>
+      <input id="input-day9" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day9-part1">Go!</button>
+        <label for="result-day9-part1">Result</label>
+        <input id="result-day9-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day9-part2">Go!</button>
+        <label for="result-day9-part2">Result</label>
+        <input id="result-day9-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day10">
+    <h2>Day 10: A placeholder</h2>
+      <label for="input-day10">Input</label>
+      <input id="input-day10" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day10-part1">Go!</button>
+        <label for="result-day10-part1">Result</label>
+        <input id="result-day10-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day10-part2">Go!</button>
+        <label for="result-day10-part2">Result</label>
+        <input id="result-day10-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day11">
+    <h2>Day 11: A placeholder</h2>
+      <label for="input-day11">Input</label>
+      <input id="input-day11" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day11-part1">Go!</button>
+        <label for="result-day11-part1">Result</label>
+        <input id="result-day11-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day11-part2">Go!</button>
+        <label for="result-day11-part2">Result</label>
+        <input id="result-day11-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day12">
+    <h2>Day 12: A placeholder</h2>
+      <label for="input-day12">Input</label>
+      <input id="input-day12" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day12-part1">Go!</button>
+        <label for="result-day12-part1">Result</label>
+        <input id="result-day12-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day12-part2">Go!</button>
+        <label for="result-day12-part2">Result</label>
+        <input id="result-day12-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day13">
+    <h2>Day 13: A placeholder</h2>
+      <label for="input-day13">Input</label>
+      <input id="input-day13" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day13-part1">Go!</button>
+        <label for="result-day13-part1">Result</label>
+        <input id="result-day13-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day13-part2">Go!</button>
+        <label for="result-day13-part2">Result</label>
+        <input id="result-day13-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day14">
+    <h2>Day 14: A placeholder</h2>
+      <label for="input-day14">Input</label>
+      <input id="input-day14" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day14-part1">Go!</button>
+        <label for="result-day14-part1">Result</label>
+        <input id="result-day14-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day14-part2">Go!</button>
+        <label for="result-day14-part2">Result</label>
+        <input id="result-day14-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day15">
+    <h2>Day 15: A placeholder</h2>
+      <label for="input-day15">Input</label>
+      <input id="input-day15" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day15-part1">Go!</button>
+        <label for="result-day15-part1">Result</label>
+        <input id="result-day15-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day15-part2">Go!</button>
+        <label for="result-day15-part2">Result</label>
+        <input id="result-day15-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day16">
+    <h2>Day 16: A placeholder</h2>
+      <label for="input-day16">Input</label>
+      <input id="input-day16" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day16-part1">Go!</button>
+        <label for="result-day16-part1">Result</label>
+        <input id="result-day16-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day16-part2">Go!</button>
+        <label for="result-day16-part2">Result</label>
+        <input id="result-day16-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day17">
+    <h2>Day 17: A placeholder</h2>
+      <label for="input-day17">Input</label>
+      <input id="input-day17" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day17-part1">Go!</button>
+        <label for="result-day17-part1">Result</label>
+        <input id="result-day17-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day17-part2">Go!</button>
+        <label for="result-day17-part2">Result</label>
+        <input id="result-day17-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day18">
+    <h2>Day 18: A placeholder</h2>
+      <label for="input-day18">Input</label>
+      <input id="input-day18" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day18-part1">Go!</button>
+        <label for="result-day18-part1">Result</label>
+        <input id="result-day18-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day18-part2">Go!</button>
+        <label for="result-day18-part2">Result</label>
+        <input id="result-day18-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day19">
+    <h2>Day 19: A placeholder</h2>
+      <label for="input-day19">Input</label>
+      <input id="input-day19" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day19-part1">Go!</button>
+        <label for="result-day19-part1">Result</label>
+        <input id="result-day19-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day19-part2">Go!</button>
+        <label for="result-day19-part2">Result</label>
+        <input id="result-day19-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day20">
+    <h2>Day 20: A placeholder</h2>
+      <label for="input-day20">Input</label>
+      <input id="input-day20" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day20-part1">Go!</button>
+        <label for="result-day20-part1">Result</label>
+        <input id="result-day20-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day20-part2">Go!</button>
+        <label for="result-day20-part2">Result</label>
+        <input id="result-day20-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day21">
+    <h2>Day 21: A placeholder</h2>
+      <label for="input-day21">Input</label>
+      <input id="input-day21" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day21-part1">Go!</button>
+        <label for="result-day21-part1">Result</label>
+        <input id="result-day21-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day21-part2">Go!</button>
+        <label for="result-day21-part2">Result</label>
+        <input id="result-day21-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day22">
+    <h2>Day 22: A placeholder</h2>
+      <label for="input-day22">Input</label>
+      <input id="input-day22" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day22-part1">Go!</button>
+        <label for="result-day22-part1">Result</label>
+        <input id="result-day22-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day22-part2">Go!</button>
+        <label for="result-day22-part2">Result</label>
+        <input id="result-day22-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day23">
+    <h2>Day 23: A placeholder</h2>
+      <label for="input-day23">Input</label>
+      <input id="input-day23" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day23-part1">Go!</button>
+        <label for="result-day23-part1">Result</label>
+        <input id="result-day23-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day23-part2">Go!</button>
+        <label for="result-day23-part2">Result</label>
+        <input id="result-day23-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day24">
+    <h2>Day 24: A placeholder</h2>
+      <label for="input-day24">Input</label>
+      <input id="input-day24" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day24-part1">Go!</button>
+        <label for="result-day24-part1">Result</label>
+        <input id="result-day24-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day24-part2">Go!</button>
+        <label for="result-day24-part2">Result</label>
+        <input id="result-day24-part2" type="text" disabled>
+      </section>
+  </section>
+  <hr>
+  <section id="day25">
+    <h2>Day 25: A placeholder</h2>
+      <label for="input-day25">Input</label>
+      <input id="input-day25" type="text" value="">
+      <section>
+        <h4>Part 1</h4>
+        <button id="button-day25-part1">Go!</button>
+        <label for="result-day25-part1">Result</label>
+        <input id="result-day25-part1" type="text" disabled>
+      </section>
+      <section>
+        <h4>Part 2</h4>
+        <button id="button-day25-part2">Go!</button>
+        <label for="result-day25-part2">Result</label>
+        <input id="result-day25-part2" type="text" disabled>
+      </section>
+  </section>
 </main>
 
 <script src="shared.js"></script>
-<script src="day-1.js"></script>
-<script src="day-2.js"></script>
-<script src="day-3.js"></script>
+<script src="day-01.js"></script>
+<script src="day-02.js"></script>
+<script src="day-03.js"></script>
 
 <!-- required for day4 -->
 <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
 
-<script src="day-4.js"></script>
+<script src="day-04.js"></script>
+
+<script src="day-05.js"></script>
+<script src="day-06.js"></script>
+<script src="day-07.js"></script>
+<script src="day-08.js"></script>
+<script src="day-09.js"></script>
+<script src="day-10.js"></script>
+<script src="day-11.js"></script>
+<script src="day-12.js"></script>
+<script src="day-13.js"></script>
+<script src="day-14.js"></script>
+<script src="day-15.js"></script>
+<script src="day-16.js"></script>
+<script src="day-17.js"></script>
+<script src="day-18.js"></script>
+<script src="day-19.js"></script>
+<script src="day-20.js"></script>
+<script src="day-21.js"></script>
+<script src="day-22.js"></script>
+<script src="day-23.js"></script>
+<script src="day-24.js"></script>
+<script src="day-25.js"></script>
 </body>
 </html>
